costs and adapting chetty type

--- a/heckman.bib
+++ b/heckman.bib
@@ -1,46 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
-	
 
-% added by Andres
-
-@TechReport{licensed,
-    title = {{Licensed Day Care Facilities in North Carolina}},
-    year = {1971},
-    author ={{Department of Social Services}}
-}
-@TechReport{durham,
-    title = {{Durham's Share in Day Care - A Taskforce Study}},
-    year = {1973},
-    author ={{Community Planning Services}}
-}
-@TechReport{adhoc,
-    title = {{Letter from Ad Hoc Committee of Professionals in Child
-Care Services}},
-    year = {1974},
-    author ={{Ad Hoc Committee of Professionals in Child Care Services}}
-}
-@TechReport{study,
-    title = {{Day Care Cost Study}},
-    year = {1982},
-    author ={{Administrative Branch Office of Day Care Services}}
-}
-@misc{sue,
-    title = {{Personal Communication with Sue Russell, President of
-Child Care Services Association}},
-    author = {Hojman, Andr\'es and Kuperman, Sylvi},
-    year ={2015},
-  howpublished = {personal communication}
-}
-@misc{clifford,
-    title = {{Personal Communication with Richard Clifford, Senior
-Researcher at Frank Porter Graham Center, NC}},
-    author = {Hojman, Andr\'es and Kuperman, Sylvi},
-    year ={2015},
-  howpublished = {personal communication}
-}
-
-%%
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
@@ -737,6 +697,17 @@ Researcher at Frank Porter Graham Center, NC}},
   Timestamp                = {2010.08.03}
 }
 
+@Misc{Ad-Hoc-NC_1974_Letter,
+  Title                    = {Letter to {G}overnor {H}olshouser},
+
+  Author                   = {{Ad Hoc Committee of Professionals in Child Care Services, North Carolina}},
+  Month                    = {July},
+  Year                     = {1974},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
+}
+
 @Article{Adams_Griliches_1998_AdEedS,
   Title                    = {Research Productivity in a System of Universities},
   Author                   = {Adams, James D. and Griliches, Zvi},
@@ -866,6 +837,19 @@ Researcher at Frank Porter Graham Center, NC}},
 
   Owner                    = {Jenna},
   Timestamp                = {2015.10.20}
+}
+
+@TechReport{NC-Admin-Branch_1982_Day-Care-Cost-Study,
+  Title                    = {Day Care Cost Study},
+  Author                   = {{Administrative Branch, Office of Day Care Services}},
+  Institution              = {Administrative Branch, Office of Day Care Services},
+  Year                     = {1982},
+
+  Address                  = {Raleigh, NC},
+  Month                    = {December},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @Unpublished{AdvisoryCommittee_1943_minutes27Jan,
@@ -17569,14 +17553,34 @@ Researcher at Frank Porter Graham Center, NC}},
 }
 
 @Article{Cohen_1988_Pain-Suffering,
-  Title                    = {{Pain, Suffering, and Jury Awards: A Study of the Cost of Crime to Victims}},
+  Title                    = {Pain, Suffering, and Jury Awards: A Study of the Cost of Crime to Victims},
   Author                   = {Cohen, Mark A.},
   Journal                  = {Law and Society Review},
   Year                     = {1988},
-  Pages                    = {537--555},
+  Number                   = {3},
+  Pages                    = {537--556},
+  Volume                   = {22},
 
+  Doi                      = {10.2307/3053629},
   Owner                    = {Jenna},
   Publisher                = {JSTOR},
+  Timestamp                = {2015.12.16}
+}
+
+@InCollection{Cohen-Bowles_2010_Estimating-Cost-Crime,
+  Title                    = {Estimating Costs of Crime},
+  Author                   = {Cohen, Mark A. and Bowles, Roger},
+  Booktitle                = {Handbook of Quantitative Criminology},
+  Publisher                = {Springer},
+  Year                     = {2010},
+
+  Address                  = {New York},
+  Chapter                  = {8},
+  Editor                   = {Piquero, Alex R. and Weisburd, David},
+  Pages                    = {143-161},
+
+  Doi                      = {10.1007/978-0-387-77650-7_8},
+  Owner                    = {Jenna},
   Timestamp                = {2015.12.16}
 }
 
@@ -17606,18 +17610,6 @@ Researcher at Frank Porter Graham Center, NC}},
   Volume                   = {42},
 
   Timestamp                = {2008.08.08}
-}
-
-@Article{Cohen-Bowles_2010_Estimating-Cost-Crime,
-  Title                    = {{Estimating Costs of Crime}},
-  Author                   = {Cohen, Mark and Bowles, Roger},
-  Journal                  = {Handbook of Quantitative Criminology},
-  Year                     = {2010},
-  Pages                    = {143-161},
-
-  Owner                    = {Jenna},
-  Publisher                = {Springer},
-  Timestamp                = {2015.12.16}
 }
 
 @TechReport{Cohen_Yu_2012_ConcentrationandPersistence,
@@ -17998,6 +17990,20 @@ Researcher at Frank Porter Graham Center, NC}},
 
   Owner                    = {Jenni},
   Timestamp                = {2011.10.05}
+}
+
+@TechReport{Comm-Plan-Serv_1973_Durhams-Share,
+  Title                    = {{D}urham's Share in Day Care: A Task Force Study},
+  Author                   = {{Community Planning Services}},
+  Institution              = {Community Planning Services},
+  Year                     = {1973},
+
+  Address                  = {Durham, NC},
+  Month                    = {August},
+  Type                     = {Summary Report},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @TechReport{GeneralAccountingOffice_1980_BOOKAttritioninMilitary,
@@ -18989,11 +18995,16 @@ Researcher at Frank Porter Graham Center, NC}},
 }
 
 @Article{Courtemanche_etal_2015_Adjusting-Body-Mass,
-  Title                    = {{Adjusting Body Mass for Measurement Error with Invalid Validation Data}},
+  Title                    = {Adjusting Body Mass for Measurement Error with Invalid Validation Data},
   Author                   = {Courtemanche, Charles and Pinkston, Joshua C. and Stewart, Jay},
   Journal                  = {Economics \& Human Biology},
   Year                     = {2015},
 
+  Month                    = {December},
+  Pages                    = {275--293},
+  Volume                   = {19},
+
+  Doi                      = {10.1016/j.ehb.2015.04.003},
   Owner                    = {Jenna},
   Publisher                = {Elsevier},
   Timestamp                = {2015.12.16}
@@ -20123,13 +20134,15 @@ Researcher at Frank Porter Graham Center, NC}},
 }
 
 @InCollection{Cutler_Meara_1998_Med-Costs_BOOK,
-  Title                    = {The Medical Costs of the Young and Old: A Forty-Year Perspective},
+  Title                    = {The Medical Costs of the Young and Old: A Forty Year Perspective},
   Author                   = {Cutler, David M. and Meara, Ellen},
   Booktitle                = {Frontiers in the Economics of Aging},
   Publisher                = {University of Chicago Press},
   Year                     = {1998},
+
+  Address                  = {Chicago},
   Editor                   = {Wise, David A.},
-  Pages                    = {215--246},
+  Pages                    = {215--242},
 
   Owner                    = {Jenna},
   Timestamp                = {2015.12.16}
@@ -26575,12 +26588,12 @@ Researcher at Frank Porter Graham Center, NC}},
 }
 
 @Article{Finkelstein_1982_Day_Care_YC,
-  Title                    = {Is It Stimulated by Day Care?},
+  Title                    = {Aggression: Is It Stimulated by Day Care?},
   Author                   = {Finkelstein, Neal W.},
   Journal                  = {Young Children},
   Year                     = {1982},
   Number                   = {6},
-  Pages                    = {3-9},
+  Pages                    = {3--9},
   Volume                   = {37},
 
   Owner                    = {Stallings_LLC},
@@ -27816,13 +27829,25 @@ Researcher at Frank Porter Graham Center, NC}},
 }
 
 @TechReport{FPGC_Progress-Report_1973,
-  Title                    = {{Perspectives: Child Care. A Progress Report}},
+  Title                    = {Perspectives: Child Care. {A} Progress Report},
   Author                   = {{Frank Porter Graham Center}},
   Year                     = {1973},
   Type                     = {{Progress Report}},
 
   Owner                    = {Jenna},
   Timestamp                = {2015.12.16}
+}
+
+@TechReport{FPG_1979_Progress-Report,
+  Title                    = {The {F}rank {P}orter {G}raham {C}hild {D}evelopment {C}enter Progress Report 1979},
+  Author                   = {{Frank Porter Graham Child Development Center}},
+  Institution              = {Child Development Institute, University of North Carolina at Chapel Hill},
+  Year                     = {1979},
+
+  Address                  = {Chapel Hill, NC},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.06.23}
 }
 
 @Article{Frank_1992_ChicagoTribuneGEDLoses,
@@ -31460,6 +31485,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31472,17 +31508,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -33565,6 +33590,21 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {19},
 
   Timestamp                = {2010.01.15}
+}
+
+@Article{Haines_2000_NAMTA,
+  Title                    = {{M}ontessori and Early Childhood Education: A Contemporary Perspective},
+  Author                   = {Haines, Annette},
+  Journal                  = {NAMTA Journal},
+  Year                     = {2000},
+
+  Month                    = {Winter},
+  Number                   = {1},
+  Pages                    = {217--230},
+  Volume                   = {25},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @InCollection{Haldane_1938_BiologyofInequality,
@@ -37724,7 +37764,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
 @Unpublished{Heckman-etal_2015_Milgrom-paper,
   Title                    = {Understanding and Comparing the Mechanisms Producing the Impacts of Major Early Childhood Programs with Long-Term Follow-Up},
-  Author                   = {Heckman, James J. and Kuperman Rothkopf, Sylvi and Cheng, Carey},
+  Author                   = {Heckman, James J. and Kuperman, Sylvi and Cheng, Carey},
   Note                     = {University of Chicago, Department of Economics},
   Year                     = {2015},
 
@@ -47735,7 +47775,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
 @Unpublished{perry2014-2015interviews,
   Title                    = {Interviews and Reflections of {L}ouise {D}erman-{S}parks, {E}velyn {M}oore, and {C}onstance {K}amii},
-  Author                   = {Kuperman Rothkopf, Sylvi},
+  Author                   = {Kuperman, Sylvi},
   Note                     = {University of Chicago's Center for the Economics of Human Development, Chicago},
   Year                     = {2014--2015},
 
@@ -47745,7 +47785,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
 @Unpublished{abc2014-2015interviews,
   Title                    = {Interviews of {F}rances {C}ampbell, {C}arrie {B}ynum, {P}hyllis {R}oyster, {G}ael {M}c{G}inness, {J}oseph {S}parling, {A}lbert {C}ollier, {B}arbara {W}asik, {L}ynne {V}ernon-{F}eagans, {T}om {R}ichey, {M}argaret {B}urchinal, {T}helma {H}arms, and {R}ichard {C}lifford},
-  Author                   = {Kuperman Rothkopf, Sylvi},
+  Author                   = {Kuperman, Sylvi},
   Note                     = {University of Chicago's Center for the Economics of Human Development, Chicago},
   Year                     = {2014-2015},
 
@@ -47755,7 +47795,7 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
 @Unpublished{Kuperman_Cheng_2015_Comparison-of-EC-Interventions,
   Title                    = {Comparison of Randomized Early Childhood Interventions as They Were Implemented: {P}erry, {ABC}, {CARE}, and {IHDP}},
-  Author                   = {Kuperman Rothkopf, Sylvi and Cheng, Carey},
+  Author                   = {Kuperman, Sylvi and Cheng, Carey},
   Note                     = {University of Chicago, Department of Economics},
   Year                     = {2015},
 
@@ -47763,18 +47803,9 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2015.10.02}
 }
 
-@Unpublished{Kuperman_2015_Clifford-Russell-Interview,
-  Title                    = {Interview with {R}ichard {C}lifford and {S}ue {R}ussell},
-  Author                   = {Sylvi Kuperman},
-  Year                     = {2015},
-
-  Owner                    = {Jenna},
-  Timestamp                = {2015.12.07}
-}
-
 @Unpublished{ihdp2014interviews,
   Title                    = {Interviews of {D}onna {B}ryant, {B}arbara {W}asik, {D}onna {S}piker, {J}oseph {S}parling, and {J}eanne {B}rooks-{G}unn},
-  Author                   = {Kuperman, S. and Cheng, Q.},
+  Author                   = {Kuperman, Sylvi and Cheng, Carey},
   Note                     = {University of Chicago's Center for the Economics of Human Development, Chicago},
   Year                     = {2014},
 
@@ -47784,12 +47815,30 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
 @Unpublished{projectcare2014interviews,
   Title                    = {Interviews of {F}rances {C}ampbell, {C}arrie {B}ynum, {P}hyllis {R}oyster, {G}ael {M}c{G}inness, {J}oseph {S}parling, {A}lbert {C}ollier, {B}arbara {W}asik, {L}ynne {V}ernon-{F}eagans, {T}om {R}ichey, {M}argaret {B}urchinal, {T}helma {H}arms, {R}ichard Clifford, {R}on {H}askins, and {S}usann {H}utaff {H}askins},
-  Author                   = {Kuperman, S. and Cheng, Q},
+  Author                   = {Kuperman, Sylvi and Cheng, Carey},
   Note                     = {University of Chicago's Center for the Economics of Human Development, Chicago},
   Year                     = {2014},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2014.12.18}
+}
+
+@Unpublished{Kuperman_2015_Clifford-Russell-Interview,
+  Title                    = {Interview with {R}ichard {C}lifford and {S}ue {R}ussell},
+  Author                   = {Kuperman, Sylvi and Hojman, Andr\'{e}s},
+  Year                     = {2015},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2015.12.07}
+}
+
+@Unpublished{Kuperman-Hojman_2015_Hodgers-Interview,
+  Title                    = {Interview with Mary Hodgers},
+  Author                   = {Kuperman, Sylvi and Hojman, Andr\'{e}s},
+  Year                     = {2015},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @Article{Kurz_Motolese_2001_ET,
@@ -50239,6 +50288,33 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Owner                    = {Jenni},
   Timestamp                = {2011.07.17}
+}
+
+@Article{Lillard_2013_Am-J-Play,
+  Title                    = {Playful Learning and {M}ontessori Education},
+  Author                   = {Lillard, Angeline S.},
+  Journal                  = {American Journal of Play},
+  Year                     = {2013},
+
+  Month                    = {Winter},
+  Number                   = {2},
+  Pages                    = {157--186},
+  Volume                   = {5},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
+}
+
+@Article{Lillard_2008_Montessori-Life,
+  Title                    = {How Important Are the {M}ontessori Materials?},
+  Author                   = {Lillard, Angeline S.},
+  Journal                  = {Montessori Life},
+  Year                     = {2008},
+  Pages                    = {20--25},
+  Volume                   = {4},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @Unpublished{Lillard_2001_DoGeneralEducational,
@@ -55086,19 +55162,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2011.07.17}
 }
 
-@Article{Mcginness_1981_Developing,
-  Title                    = {Developing sociolinguistic competence in children},
-  Author                   = {McGinness, G. and Ramey, C. T.},
-  Journal                  = {Canadian Journal of Early Childhood Education},
-  Year                     = {1981},
-  Number                   = {2},
-  Pages                    = {22--43},
-  Volume                   = {1},
-
-  Owner                    = {Jessica Dyer},
-  Timestamp                = {2014.10.02}
-}
-
 @InCollection{McGinness_1982_Language-Poverty-Child,
   Title                    = {The Language of the Poverty Child: Implications from Center-Based Intervention and Evaluation Programs},
   Author                   = {McGinness, Gael D.},
@@ -55112,6 +55175,19 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2015.05.21}
+}
+
+@Article{Mcginness_1981_Developing,
+  Title                    = {Developing sociolinguistic competence in children},
+  Author                   = {McGinness, Gael D. and Ramey, Craig T.},
+  Journal                  = {Canadian Journal of Early Childhood Education},
+  Year                     = {1981},
+  Number                   = {2},
+  Pages                    = {22--43},
+  Volume                   = {1},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2014.10.02}
 }
 
 @Article{McGinnis_Williams-Russo_2002_HA,
@@ -59435,6 +59511,17 @@ Robinson, Lara Rachel},
   Timestamp                = {2015.12.04}
 }
 
+@Booklet{NC-State-Dept_1972_Licensed-Day-Care,
+  Title                    = {Licensed Day Care Facilities in {N}orth {C}arolina as of February 1, 1971},
+
+  Address                  = {Raleigh, NC},
+  Author                   = {{North Carolina State Department of Social Services}},
+  Year                     = {1972},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
+}
+
 @InCollection{Noyes_1945_directors,
   Title                    = {Director's Comment},
   Author                   = {Noyes, C. Reinold},
@@ -60337,6 +60424,17 @@ Robinson, Lara Rachel},
   Number                   = {3},
   Pages                    = {367--380},
   Volume                   = {143}
+}
+
+@Electronic{Opera-Nazionale-Montessori_2016_Website,
+  Title                    = {{O}pera {N}azionale {M}ontessori: About Us},
+  Author                   = {{Opera Nazionale Montessori}},
+  HowPublished             = {Website, http://www.operanazionalemontessori.it/index.php?option$=$com\_content\&task=section\&id$=$14\&Itemid$=$39 (Accessed 6/22/2016)},
+  Url                      = {http://www.operanazionalemontessori.it/index.php?option=com_content&task=section&id=14&Itemid=39},
+  Year                     = {2016},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @Article{Orcutt_1962_AER,
@@ -69315,6 +69413,16 @@ Robinson, Lara Rachel},
   Timestamp                = {2008.04.08}
 }
 
+@Unpublished{Schilling_2011_Montessori-Approach,
+  Title                    = {{M}ontessori Approach to Teaching/Learning and Use of Didactic Materials},
+  Author                   = {Schilling, Katarina},
+  Note                     = {Presented at the University of Manitoba Education Graduate Symposium on March 4, 2011},
+  Year                     = {2011},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
+}
+
 @Article{Schmeichel_Vohs_etal_2003_JoPaSP,
   Title                    = {Intellectual performance and ego depletion: Role of the self in logical reasoning and other information processing},
   Author                   = {Schmeichel, Brandon J. and Vohs, Kathleen D. and Baumeister, Roy F.},
@@ -69974,6 +70082,18 @@ Robinson, Lara Rachel},
   Publisher                = {University of North Carolina Press},
   Timestamp                = {2013.01.30},
   Url                      = {http://www.jstor.org/stable/40364707}
+}
+
+@Electronic{Scuola-Waldorf-Padova_2016_Nostra-Scuola-Waldorf,
+  Title                    = {La Nostra {S}cuola {W}aldorf},
+  Author                   = {{Scuola Waldorf Padova}},
+  HowPublished             = {Website, http://www.waldorfpadova.it/la-scuola-di-padova/ (Accessed 6/22/2016)},
+  Organization             = {Scuola Waldorf Padova},
+  Url                      = {http://www.waldorfpadova.it/la-scuola-di-padova/},
+  Year                     = {2016},
+
+  Owner                    = {acursivegirl},
+  Timestamp                = {2016.06.22}
 }
 
 @Article{Seaman_White_2013_SMMR,
@@ -72344,7 +72464,7 @@ Robinson, Lara Rachel},
 @Book{Sparling_Lewis_1979_BOOKLearninggamesFirstThree,
   Title                    = {{LearningGames} for the First Three Years : A Guide to Parent/Child Play},
   Author                   = {Sparling, Joseph and Lewis, Isabelle},
-  Publisher                = {Berkley Books},
+  Publisher                = {Walker and Company},
   Year                     = {1979},
 
   Address                  = {New York},
@@ -82898,6 +83018,16 @@ early childhood education and pre-kindergarten programs},
 
   Owner                    = {Jenni},
   Timestamp                = {2013.03.15}
+}
+
+@Standard{UNC-Archives_Health-Affairs,
+  Title                    = {Health Affairs: Records of the {O}ffice of the {V}ice {C}hancellor. {S}ubgroup 2: Centers, Institutes and Programs. {S}eries 2: {C}hild {D}evelopment {I}nstitute. {D}ay Care Center Funding, 1978; 1981},
+  Organization             = {University of North Carolina Archives},
+
+  Address                  = {Chapel Hill, NC},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.06.23}
 }
 
 @Misc{NewYorkTimes_2009_Flunk,
