--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -250,7 +250,7 @@ Note: The starred ratios represent the ones we believe were the most relevant fo
 % Need citations
 \noindent Previous papers have used childcare cost rates that are not specific to North Carolina and do not account for the contemporaneous structure of the subsidies. We use the local subsidy rates that were in place when the ABC subjects were in preschool to impute different costs of the alternative preschools. These costs depend on the specific preschool attended and the eligibility of the families to receive the subsidies. \\
 
-\noindent When ABC was in operation, center-based childcare was subsidized by several federal programs (the Department of Social Services categorized these programs as Child Welfare, AFDC, and Work Incentive Programs).\footnote{\citet{licensed}.} However, our calculations of the cost of alternative preschool is simplified by the fact that the subsidies were centralized and regulated by the County Department of Social Services. Those departments used a uniform subsidy rate, regardless of the origin of the funds.\footnote{\citet{adhoc}.} We collected information about the subsidy rate at the time, which approximates the price of the centers, as centers pegged their fees and services to the maximum subsidy rate. Moreover, we know which centers each ABC control subject attended. We interviewed North Carolina childcare staff and academics that study childcare to document which of those centers were subsidized and regulated at the time.\footnote{\citet{clifford,sue}.} For subsidized centers, we impute the maximum Department of Social Services fee established at the time: \$633/month in 2014 USD.\footnote{\citet{adhoc,durham}.} For non-subsidized centers, we impute the mean of costs for Level-1 centers (minimum accepted quality level) according to a 1982 North Carolina study of the cost of childcare: \$298/month in 2014 USD.\footnote{\citet{study}.} Although the information in this survey is not ideal to assess the cost of subsidized preschools, as the subsidies greatly changed after the end of FIDCR (1981), it provides an approximation for assessing the cost of the non-subsidized centers. \\
+\noindent When ABC was in operation, center-based childcare was subsidized by several federal programs (the Department of Social Services categorized these programs as Child Welfare, AFDC, and Work Incentive Programs).\footnote{\citet{NC-State-Dept_1972_Licensed-Day-Care}.} However, our calculations of the cost of alternative preschool is simplified by the fact that the subsidies were centralized and regulated by the County Department of Social Services. Those departments used a uniform subsidy rate, regardless of the origin of the funds.\footnote{\citet{Ad-Hoc-NC_1974_Letter}.} We collected information about the subsidy rate at the time, which approximates the price of the centers, as centers pegged their fees and services to the maximum subsidy rate. Moreover, we know which centers each ABC control subject attended. We interviewed North Carolina childcare staff and academics that study childcare to document which of those centers were subsidized and regulated at the time.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview,Kuperman-Hojman_2015_Hodgers-Interview}.} For subsidized centers, we impute the maximum Department of Social Services fee established at the time: \$633/month in 2014 USD.\footnote{\citet{Ad-Hoc-NC_1974_Letter,Comm-Plan-Serv_1973_Durhams-Share}.} For non-subsidized centers, we impute the mean of costs for Level-1 centers (minimum accepted quality level) according to a 1982 North Carolina study of the cost of childcare: \$298/month in 2014 USD.\footnote{\citet{NC-Admin-Branch_1982_Day-Care-Cost-Study}.} Although the information in this survey is not ideal to assess the cost of subsidized preschools, as the subsidies greatly changed after the end of FIDCR (1981), it provides an approximation for assessing the cost of the non-subsidized centers. \\
 
 \noindent Finally, we determine if the families paid the costs themselves or if they were subsidized, in which case we also add deadweight costs. We consider if a subject was eligible for subsidies if the family lived in poverty according to the federal guidelines and all parents living at home worked. If a family is deemed eligible, then we assume the child's preschool was fully subsidized using the rates described above without additional subsidies. \\
 
@@ -818,7 +818,7 @@ and
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{I.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{I.\arabic{table}}
-\input{Appendices/ProgramCosts}
+\input{Appendices/ProgramCostsAlt}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{J.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{J.\arabic{table}}
