done revising costs and chetty type analysis

--- a/Appendices/Crime.tex
+++ b/Appendices/Crime.tex
@@ -1,5 +1,7 @@
 \section{Quantifying the Benefits in Crime Reduction} \label{appendix:crime}
 
+\noindent \textbf{[JLG: This Appendix is preliminary and explains the crime projections for ABC only, although all our calculation include CARE. For CARE's crime outcomes we follow the exact same methodology. We are updating this appendix.]}
+
 \subsection{Data Description}
 
 \noindent The crime data available in ABC come from four different sources provided by the program, which we supplement with auxiliary datasets. We summarize the ABC and auxiliary datasets related to crime below. \\
