--- a/output/cba_summary.tex
+++ b/output/cba_summary.tex
@@ -9,7 +9,7 @@ Estimate 	&	IRR	&	B/C	&	IRR	&	B/C	&	IRR	&	B/C	\\
 % INSERT summary_tex.xls FILE BELOW
 % INSERT summary_tex.xls FILE BELOW
 
-Baseline	&	0.10 	&	2.30	&	0.15 &	7.88 	&	\textbf{0.13}	&	\textbf{4.35}	\\
+Baseline	&	0.10 	&	2.30	&	0.15 &	7.88 	&	\textbf{0.13}	&	4.35	\\
 	&	(0.12)	&	(1.56)	&	(0.13)	&	(8.06)	&	(0.11)	&	(2.57)	\\
 Relative to Staying at Home	&	-0.14	&	\textbf{4.97}	&	0.02	&	0.55	&	\textbf{0.09} &	3.78	\\
 	&	(0.13)	&	(2.02)	&	(0.13)	&	(3.00)	&	(0.05)	&	(2.15)	\\
