josh updated the slides to use the cba_summary.tex file.

--- a/abc_comprehensivecba_slides.tex
+++ b/abc_comprehensivecba_slides.tex
@@ -200,8 +200,9 @@ $\rightarrow$ Strengthen when accounting for substitution bias
 			$\rightarrow$ Costs: program, alternative preschool, education \\ 
 			$\rightarrow$ Benefits: reduced special education; parental income; labor income; judicial, incarceration, and victimization costs; health expenditures; quality-adjusted life years 
 	\end{itemize}
-	\centering
-	\scalebox{.85}{\input{output/cba_results_summary}}
+	\begin{center}
+	\scalebox{.75}{\input{output/cba_summary}}
+	\end{center}	
 \end{frame}
 
 %% ---------------------------------------------------------------------------
